--- a/fundamentos/program08.ipynb
+++ b/fundamentos/program08.ipynb
@@ -68,14 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f00ee111-6335-4c66-ad6e-5b3af4cde89a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O cliente pode viajar? True\n"
+     ]
+    }
+   ],
    "source": [
     "# Operador NOT\n",
     "print(f\"O cliente pode viajar? {tem_dinheiro and not tem_tempo}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17d32215-f0b3-4e17-a56b-99c02c91075e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
