--- a/fundamentos/exercicios01.ipynb
+++ b/fundamentos/exercicios01.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "id": "31594852-aa6d-4268-af35-560f817c7398",
    "metadata": {},
    "outputs": [
@@ -293,13 +293,13 @@
      "output_type": "stream",
      "text": [
       "A pessoa vai se molhar?\n",
-      "NÃO\n"
+      "SIM\n"
      ]
     }
    ],
    "source": [
     "chovendo = True\n",
-    "guarda_chuva = True\n",
+    "guarda_chuva = False\n",
     "print(\"A pessoa vai se molhar?\")\n",
     "if(chovendo and guarda_chuva) == True:\n",
     "    print(\"NÃO\")\n",
