Coleta de Dados de Entrada - parte 2

--- a/fundamentos/program16.ipynb
+++ b/fundamentos/program16.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0a7f2d26-bb17-453c-9816-bda987b59a33",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,17 @@
      "output_type": "stream",
      "text": [
       "Jogador 1, digite sua jogada:  PEDRA\n",
-      "Jogador 2, digite sua jogada:  papel\n"
+      "Jogador 2, digite sua jogada:  PEDRA\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "Jogador 1 escolheu: pedra\n",
+      "Jogador 2 escolheu: pedra\n",
+      "-------------------------\n"
      ]
     }
    ],
@@ -53,7 +63,12 @@
     "\n",
     "# --- 3. Tratamento de Dados de Entrada ---\n",
     "jogada_jogador1 = jogada_jogador1_inicial.lower().strip()\n",
-    "jogada_jogador2 = jogada_jogador2_inicial.lower().strip()"
+    "jogada_jogador2 = jogada_jogador2_inicial.lower().strip()\n",
+    "\n",
+    "print(\"-\" * 25)\n",
+    "print(f\"Jogador 1 escolheu: {jogada_jogador1}\")\n",
+    "print(f\"Jogador 2 escolheu: {jogada_jogador2}\")\n",
+    "print(\"-\" * 25)\n"
    ]
   },
   {
