--- a/fundamentos/program16.ipynb
+++ b/fundamentos/program16.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "0a7f2d26-bb17-453c-9816-bda987b59a33",
    "metadata": {},
    "outputs": [
@@ -30,8 +30,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Jogador 1, digite sua jogada:  PEDRA\n",
-      "Jogador 2, digite sua jogada:  PEDRA\n"
+      "Jogador 1, digite sua jogada:  TESOURA\n",
+      "Jogador 2, digite sua jogada:  PAPEL\n"
      ]
     },
     {
@@ -39,9 +39,12 @@
      "output_type": "stream",
      "text": [
       "-------------------------\n",
-      "Jogador 1 escolheu: pedra\n",
-      "Jogador 2 escolheu: pedra\n",
-      "-------------------------\n"
+      "Jogador 1 escolheu: tesoura\n",
+      "Jogador 2 escolheu: papel\n",
+      "-------------------------\n",
+      "Resultado: Jogador 1 venceu !!!. Parabéns !!!\n",
+      "\n",
+      "--- FIM DO JOGO ---\n"
      ]
     }
    ],
@@ -68,7 +71,28 @@
     "print(\"-\" * 25)\n",
     "print(f\"Jogador 1 escolheu: {jogada_jogador1}\")\n",
     "print(f\"Jogador 2 escolheu: {jogada_jogador2}\")\n",
-    "print(\"-\" * 25)\n"
+    "print(\"-\" * 25)\n",
+    "\n",
+    "# --- 4. lógica do Jogo e Resultado ---\n",
+    "#checagem das opções dos jogadores\n",
+    "if jogada_jogador1 not in opcoes_validas or jogada_jogador2 not in opcoes_validas:\n",
+    "    print(\"AVISO: Uma ou ambas as jogadas são inválidas! Por favor, use apenas 'pedra', ´papel' ou 'tesoura'.\")\n",
+    "\n",
+    "#Lógicas do jogo\n",
+    "\n",
+    "# I - Empate\n",
+    "elif jogada_jogador1 == jogada_jogador2:\n",
+    "    print(\"Resultado: Empate\")\n",
+    "\n",
+    "# II - Jogador 1 vence\n",
+    "elif (jogada_jogador1 == \"pedra\" and jogada_jogador2 == \"tesoura\") or \\\n",
+    "     (jogada_jogador1 == \"tesoura\" and jogada_jogador2 == \"papel\") or \\\n",
+    "     (jogada_jogador1 == \"papel\" and jogada_jogador2 == \"pedra\"):\n",
+    "      print(\"Resultado: Jogador 1 venceu !!!. Parabéns !!!\")\n",
+    "# III - Se não houve empate e o Joagador 1 não venceu, então Jogador 2 venceu.\n",
+    "else:\n",
+    "    print(\"Resultado: Jogador 2 venceu !!!. Parabéns !!!\")\n",
+    "print(\"\\n--- FIM DO JOGO ---\")\n"
    ]
   },
   {
