Estruturas de Repetição - Loop For - Parte 1/2

--- a/estruturas_de_repeticao/program02.ipynb
+++ b/estruturas_de_repeticao/program02.ipynb
@@ -97,16 +97,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4e7f70a5-09c6-4a3e-8ef0-9bc6db619a07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Contagem até 5:\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#Exemplo com função range()\n",
     "print(\"\\nContagem até 5:\")\n",
     "for numero in range(6):\n",
-    "    print(numero"
+    "    print(numero)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d997e0b7-e610-419e-96eb-78ca425c9f68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
