Loops com condicionais

--- a/estruturas_de_repeticao/program05.ipynb
+++ b/estruturas_de_repeticao/program05.ipynb
@@ -58,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "42ca830d-3748-4892-8db6-82e349b5c6e3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis '}' does not match opening parenthesis '(' (1685201402.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{item} custa R$ {preco} reais (acima de 20)\"}\u001b[0m\n\u001b[1;37m                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis '}' does not match opening parenthesis '('\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arroz custa R$ 25 reais (acima de 20)\n",
+      "carne custa R$ 45 reais (acima de 20)\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "# Dicionário \n",
     "produtos = {\"arroz\": 25, \"feijão\": 12, \"carne\": 45, \"marcarrão\": 8}\n",
     "for item, preco in produtos.items():\n",
-    "    if preco < 20:\n",
+    "    if preco > 20:\n",
     "        print(f\"{item} custa R$ {preco} reais (acima de 20)\")"
    ]
   },
