Controle de fluxo em loops

--- a/estruturas_de_repeticao/program06.ipynb
+++ b/estruturas_de_repeticao/program06.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e49e40c4-8f37-426a-bbe2-050b28f467f5",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
     "\n",
     "for numero in range(1,11):\n",
     "    if numero % 2 == 0:\n",
-    "        continue\n",
+    "        continue #pular para o proxima iteração se o numero for par\n",
     "    print(numero)"
    ]
   },
