--- a/estruturas_de_repeticao/program08.ipynb
+++ b/estruturas_de_repeticao/program08.ipynb
@@ -141,13 +141,13 @@
    "id": "9bf9acd9-b4d8-4321-835c-073ffef95de4",
    "metadata": {},
    "source": [
-    "#### Um generator é um iterador que não armazena todos os dados de uma vez, mas sim gera cada valor sob demanda. No caso, gen não é uma lista de quadrados de 0 a 5, mas um objeto que sabe como calcular esses valores quando solicitado. A grande vanteagem do genereator é que ele economiza memoria"
+    "Um generator é um iterador que não armazena todos os dados de uma vez, mas sim gera cada valor sob demanda. No caso, gen não é uma lista de quadrados de 0 a 5, mas um objeto que sabe como calcular esses valores quando solicitado. A grande vanteagem do genereator é que ele economiza memoria"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cacce4f-1cb4-44cf-99fb-3bf365c885f9",
+   "id": "76a4f1e9-d73a-4c0a-8cb1-11a5b52672c8",
    "metadata": {},
    "outputs": [],
    "source": []
